--- a/COVID_Sustainability_Global.Rmd
+++ b/COVID_Sustainability_Global.Rmd
@@ -39,7 +39,7 @@ Load outputs from EDA Rmds
 load("data/WorldSustainabilityData_Processed.Rda")
 #skim(wsd)
 max(wsd$Year)
-wsd <- wsd %>% dplyr::select(1:3,"Continent", "WorldRegion", 4:21,23:31) %>% # rearrange a little to group continent & World Region with the other geographic data
+wsd <- wsd %>% dplyr::select(1:2,"Continent", "WorldRegion", 3:21,23:31) %>% # rearrange a little to group continent & World Region with the other geographic data
   mutate(Country.Name=as.factor(Country.Name)) %>%
   rename(country=Country.Name)
 
@@ -56,74 +56,27 @@ covid.country <- levels(covid$country)
 
 covid$country <- recode_factor(covid$country, "UK"="United Kingdom", "Gambia"="Gambia, The", "Laos"="Lao PDR", "Egypt"="Egypt, Arab Rep.", "South Korea"="Korea, Rep.", "USA"="United States", "Russia"="Russian Federation", "Venezuela"="Venezuela, RB", "Democratic Republic Of The Congo"="DRC")
 wsd$country <- recode_factor(wsd$country,  "Iran, Islamic Rep."="Iran", "Bosnia and Herzegovina"="Bosnia And Herzegovina", "Cote d'Ivoire"="Cote D Ivoire", "Guinea-Bissau"="Guinea Bissau", "Kyrgyz Republic"="Kyrgyzstan", "North Macedonia"="Macedonia", "Eswatini"="Swaziland", "Vietnam"="Viet Nam", "Timor-Leste"="Timor Leste", "Slovak Republic"="Slovakia", "Congo, Rep."="Congo", "Congo, Dem. Rep."="DRC")
-
-
 ```
 
 Before attempting to merge, I'll parse down the dataframes so we can hopefully we can mix and match as needed to get what we need for our final analyses.
 
-# WSD Summary Values
+# WSD EDA & Summary Values
 
-To start, I'll make a wide df the WSD data into the COVID dataset containing: the latest (2018) data; average of each parameter over time (2001 to 2018); the average of the last 3 years of data (2016-2018 for most countries); change in each parameter over time (2001-2018).
-
-``` {r}
-# 2018 values
-wsd.2018 <- wsd %>% subset(Year==max(wsd$Year)) %>% dplyr::select(-Year) #filter to last year of WSD data
-colnames(wsd.2018)[5:30] <- paste(colnames(wsd.2018)[5:30], "2018", sep = "_") #add suffix
-head(wsd.2018)
-n_unique(wsd.2018$country) #only 109 of 141 countries have 2018 data
-```
-Because only `r n_unique(wsd.2018$country)` of `r n_unique(wsd$country)` countries have sustainability data in 2018, I've also made a df including the latest available data from each country. However, we may not want to use it since the last data represents a wide range from `r unname(summary(wsd.latest$Year_latest)[1])` to `unname(summary(wsd.latest$Year_latest)[6])`
+To start, we'll try several different methods of summarizing the longitudinal WSD data into a single "timepoint". We selected the latest data reported for each country (restricted to 2016 or later) and calculated: the average of each parameter over time (2001 to 2018); the average of the last 3 years of data (2016-2018); and the relative and absolute change in each parameter over time (2001-2018). In order to maximize completeness and recency of the dataset while minimizing colinearity, we decided to use each country's latest data and data averaged over 17 years in our models below *question - except nns?*. Code for each unused summary dataframe can be found in the appendix.
 
 ```{r}
-# latest data for each country
+# latest data for each country, restricted to 2016 or later
 wsd.latest <- wsd %>% arrange(Year) %>%
   group_by(country) %>%
+  filter(Year >= 2016) %>%
   slice_tail(n=1) %>%
   ungroup()
-colnames(wsd.latest)[2:31] <- paste(colnames(wsd.latest)[2:31], "latest", sep = "_") #add suffix
+colnames(wsd.latest)[5:31] <- paste(colnames(wsd.latest)[5:31], "latest", sep = "_") #add suffix
 table(as.factor(wsd.latest$Year_latest)) # see yr frequencies
 ```
 
-Values averaged across 2016-2018; only includes countries with data from all 3 years. 
 
-```{r}
-# 3-yr averages for numeric
-wsd.3yr.num <- wsd %>% arrange(Year) %>%
-  filter(Year >= 2016) %>% #get 2016-2018 data
-  group_by(country) %>%
-  filter(n() == 3) %>%
-  summarise_if(is.numeric, mean) %>% #means
-  ungroup()
-colnames(wsd.3yr.num)[2:26] <- paste(colnames(wsd.3yr.num)[2:26], "3yr", sep = "_") #add suffix
-
-
-# 3-yr mode for factors
-# create a function to find the mode. Taken from: https://stackoverflow.com/questions/2547402/how-to-find-the-statistical-mode
-Mode <- function(x) {
-  ux <- unique(x)
-  ux[which.max(tabulate(match(x, ux)))]
-}
-
-wsd.3yr.fac <- wsd %>% arrange(Year) %>%
-  group_by(country) %>%
-  filter(Year >= 2016) %>% #get 2016-2018 data
-  filter(n() == 3) %>%
-  mutate(WorldBankIncomeClass = Mode(WorldBankIncomeClass),
-         RegimeType = Mode(RegimeType),
-         nYears=n()) %>% #count how many years are being averaged for each country) %>%
-  ungroup() %>%
-  dplyr::select(country, WorldRegion, nYears, WorldBankIncomeClass, RegimeType) %>%
-  distinct()
-#n_unique(wsd.3yr.fac$country) #make sure no countries missing
-colnames(wsd.3yr.fac)[3:5] <- paste(colnames(wsd.3yr.fac)[3:5], "3yr", sep = "_") #add suffix
-
-wsd.3yr <- merge(wsd.3yr.fac, wsd.3yr.num, by="country") %>% #rejoin num and fac
-    dplyr::select(-Year_3yr, -nYears_3yr)
-nrow(wsd.3yr)
-```
-
-Averaging across all years for every country with available data.  **add table/graph to show how many years each country has data for? or is this more of an EDA thing? Should EDA be it's own section above the Summary Values ones or should it all be presented together?**
+Averaging across all years for every country with available data.  **add table/graph to show how many years each country has data for**
 
 ```{r}
 # averages for numeric
@@ -134,6 +87,12 @@ wsd.avg.num <- wsd %>% arrange(Year) %>%
   dplyr::select(-Year)
 colnames(wsd.avg.num)[2:25] <- paste(colnames(wsd.avg.num)[2:25], "avg", sep = "_") #add suffix
 
+# create a function to find the mode. Taken from: https://stackoverflow.com/questions/2547402/how-to-find-the-statistical-mode
+Mode <- function(x) {
+  ux <- unique(x)
+  ux[which.max(tabulate(match(x, ux)))]
+}
+
 # mode for factors
 wsd.avg.fac <- wsd %>% arrange(Year) %>%
   group_by(country) %>%
@@ -141,9 +100,9 @@ wsd.avg.fac <- wsd %>% arrange(Year) %>%
          RegimeType = Mode(RegimeType),
          nYears=n()) %>% #count how many years are being averaged for each country
   ungroup() %>%
-  dplyr::select(country, WorldRegion, WorldBankIncomeClass, RegimeType, nYears) %>%
+  dplyr::select(country, WorldBankIncomeClass, RegimeType, nYears) %>%
   distinct()
-colnames(wsd.avg.fac)[3:5] <- paste(colnames(wsd.avg.fac)[3:5], "avg", sep = "_") #add suffix
+colnames(wsd.avg.fac)[2:4] <- paste(colnames(wsd.avg.fac)[2:4], "avg", sep = "_") #add suffix
 
 # #make sure modes returned as expected 
 # angola <- wsd$WorldBankIncomeClass[wsd$country=="Angola"]
@@ -155,79 +114,59 @@ wsd.avg <- merge(wsd.avg.fac, wsd.avg.num, by="country") #rejoin num and fac
 table(as.factor(wsd.avg$nYears_avg)) # see yr frequencies
 ```
 
-As you can see from the frequency table above, only 60 countries have data for all 18 years. We could restrict this to only including the averages of countries with at least 15 yrs of data by uncommenting the chunk below (filters df down to 99 countries):
 
-```{r}
-# #uncomment to remove any countries that have less than 15 years worth of data
-# wsd.avg <- wsd.avg %>%
-#   subset(nYears_avg >= 15)
-# nrow(wsd.avg)
-```
+Merge into one wide wsd dataframe and remove any variables that are highly correlate:
 
-Change in each factor over 10 years (2008-2018).
-
-```{r, warning = FALSE}
-# change in each parameter over 10 years
-# define function to get relative change
-rel.diff <- function(x) {(x - lag(x))/lag(x)} # define function to get relative change
-
-wsd.change.num <- wsd %>% 
-  group_by(country) %>%
-  arrange(Year) %>%
-  select_if(is.numeric)%>% # just dealing with numeric for now
-  subset(Year==2018 | Year == 2008) %>%
-  filter(n() >= 2) %>% #make sure country has data for both years
-  mutate(across(where(is.numeric), ~rel.diff(.), .names="{.col}_rel.diff")) %>% # change normalized by baseline values
-  # mutate(across(c(!ends_with("diff")), ~diff(.x), .names="{.col}_diff"))  %>%  #absolute change 
-  mutate_if(is.numeric, function(x) ifelse(is.infinite(x), 0, x)) %>% # change Inf values to 0
-  dplyr::select(-Year, -Year_rel.diff) %>% #-Year_diff,
-  drop_na() %>%
-  ungroup()
-
-#now factors
-wsd.change.fac <- wsd %>%
-  dplyr::select(country, Year, WorldBankIncomeClass, RegimeType)
-# order factors
-wsd.change.fac$WorldBankIncomeClass <- factor(wsd.change.fac$WorldBankIncomeClass, levels=c("Low income", "Lower-middle income", "Upper-middle income", "High income"), ordered=TRUE)
-wsd.change.fac$RegimeType <- factor(wsd.change.fac$RegimeType, levels=c("Closed Autocracy", "Electoral Autocracy", "Electoral Democracy", "Liberal Democracy"), ordered=TRUE)
-
-wsd.change.fac <- wsd.change.fac %>% 
-  group_by(country) %>%
-  arrange(Year) %>%
-  subset(Year==2018 | Year == 2008) %>%
-  filter(n() >= 2) %>% #make sure country has data for both years
-  mutate(#WorldBankIncomeClass_diff = unclass(WorldBankIncomeClass) - unclass(lag(WorldBankIncomeClass)),
-         WorldBankIncomeClass_rel.diff = rel.diff(unclass(WorldBankIncomeClass)),
-         # RegimeType_diff = unclass(RegimeType) - unclass(lag(RegimeType)),
-         RegimeType_rel.diff = rel.diff(unclass(RegimeType))) %>% 
-  mutate_if(is.numeric, function(x) ifelse(is.infinite(x), 0, x)) %>% # change Inf values to 0
-  dplyr::select(-Year) %>%
-  drop_na() %>%
-  ungroup()
-
-#now join and drop unnecessary columns used for calculations
-wsd.change <- merge(wsd.change.num, wsd.change.fac, by ="country") %>%
-  dplyr::select(country, ends_with("diff"))
-```
-
-Merge into one wide wsd dataframe:
-
-```{r}
+```{r fig.width=10, fig.height=10}
 # one predictor dataframe to rule them all
-wsd.df_list <- list(wsd.change, wsd.3yr, wsd.2018, wsd.avg) #dfs to merge, ordered purposefully for removing correlated predictors later on!
-wsd.sum.wide <- wsd.df_list %>% reduce(full_join, by='country') %>%
-  dplyr::select(-c(WorldRegion.x, WorldRegion.y))#join
-#skim(wsd.sum.wide)
+wsd.df_list <- list(wsd.latest, wsd.avg) #dfs to merge, ordered purposefully for removing correlated predictors
+wsd.sum.wide <- wsd.df_list %>% reduce(full_join, by='country')
 head(wsd.sum.wide)
+
+#removing 1 of each very colinear pair, method from https://statisticsglobe.com/remove-highly-correlated-variables-from-data-frame-r
+#stash year and non-numeric variables
+wsd.fac <- wsd.sum.wide %>%
+  select(negate(is.numeric)| contains("Year"))
+
+#plot
+# create correlation plot to see whether some variables are highly correlated (not tolerated by lm)
+wsd.sum.wide %>% 
+  select_if(., is.numeric) %>%
+  cor(., use = "pairwise.complete.obs") %>%
+  corrplot(method = "color", 
+           type = "upper", order = "hclust", 
+           addCoef.col = "black", # Add coefficient of correlation
+           tl.col="black", tl.srt = 45, #Text label color and rotation
+           # hide correlation coefficient on the principal diagonal
+           diag = FALSE 
+           )
+
+#get colinearities  
+wsd.num <- wsd.sum.wide %>% 
+  select(-contains("Year")) %>%
+  select_if(., is.numeric)
+wsd.corr <- wsd.num %>%
+  cor(., use="pairwise.complete.obs")
+#removing upper triangle
+wsd.corr[upper.tri(wsd.corr)] <- 0
+diag(wsd.corr) <- 0
+
+#remove vars at abs(0.97) threshold - keeping high to preserve as many variables as possible (also b/c we expect things to be correlated IRL)
+wsd.list <-  apply(wsd.corr, 2, function(x) any(abs(x) > 0.97)) #list highly correlated variables
+wsd.nocor <- wsd.num[ , !wsd.list]
+#add back factors
+wsd.nocor <- cbind(wsd.fac, wsd.nocor)
+dim(wsd.nocor)
+head(wsd.nocor)
 ```
 
-# COVID Summary Values
+# COVID EDA & Summary Values
 
 In order to come up with meaningful summary predictors and dependent variables that are compatible with our WSD, we'll next summaries our data on covid cases, deaths, and vaccinations. For our purposes in this project, we'll treat cases and deaths prior to each country's vaccine roll-out as independent variables (predictors) alongside the WSD. Vaccination data will be synthesized using PCA to create a the Vaccination Success Index (VSI), a composite score which we will use to indicate how well a country was able to vaccinate its citizens. 
 
 First, we create a dataframe with the latest COVID data from each country. Every country has some data from March 17, 2022, though some countries' last reported vaccination data was from as early as `unname(summary(last.timepoint$date.vac_last)[1])`.
 
-```{r}
+```{r, warning=FALSE}
 #last day with data for each country
 last.timepoint1 <- covid %>% group_by(country) %>%
   arrange(country,date) %>%
@@ -306,13 +245,49 @@ covid_maxrate <- covid %>%
 colnames(covid_maxrate)[2:13] <- paste(colnames(covid_maxrate)[2:13], "max", sep = "_") #add suffix
 ```
 
-Finally we'll merge these COVID predictors into a single dataframe.
+Finally we'll merge these COVID predictors into a single dataframe and remove strongly colinear predictors.
 
-```{r}
+```{r fig.width=10, fig.height=10}
 #df for cases and deaths
 case.df_list <- list(covid_maxrate, covid_prevac) #ordered to prioritize when removing correlated vars
 covid.predict <- case.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
 #skim(covid.predict)
+
+#removing 1 of each very colinear pair, method from https://statisticsglobe.com/remove-highly-correlated-variables-from-data-frame-r
+#stash year and non-numeric variables (just country)
+covid.fac <- covid.predict %>%
+  select(negate(is.numeric))
+
+#plot
+# create correlation plot to see whether some variables are highly correlated (not tolerated by lm)
+covid.predict %>% 
+  select_if(., is.numeric) %>%
+  cor(., use = "pairwise.complete.obs") %>%
+  corrplot(method = "color", 
+           type = "upper", order = "hclust", 
+           addCoef.col = "black", # Add coefficient of correlation
+           tl.col="black", tl.srt = 45, #Text label color and rotation
+           # hide correlation coefficient on the principal diagonal
+           diag = FALSE 
+           )
+
+#get colinearities  
+covid.num <- covid.predict %>% 
+  select(-contains("Year")) %>%
+  select_if(., is.numeric)
+covid.corr <- covid.num %>%
+  cor(., use="pairwise.complete.obs")
+#removing upper triangle
+covid.corr[upper.tri(covid.corr)] <- 0
+diag(covid.corr) <- 0
+
+#remove vars at abs(0.97) threshold - keeping high to preserve as many variables as possible (also b/c we expect things to be correlated IRL)
+covid.list <-  apply(covid.corr, 2, function(x) any(abs(x) > 0.97)) #list highly correlated variables
+covid.nocor <- covid.num[ , !covid.list]
+#add back factors
+covid.nocor <- cbind(covid.fac, covid.nocor)
+dim(covid.nocor)
+head(covid.nocor)
 ```
 
 
@@ -442,12 +417,12 @@ Next we'll perform PCA to create a score to summarize these important vaccinatio
 
 ``` {r}
 #drop NAs before PCA
-vac.sum.pca <- na.omit(vac.sum)
+vac.sum.pca <- vac.sum %>% na.omit()
 nrow(vac.sum.pca)
 
 vax.pca3 <- prcomp(x = vac.sum.pca[,-1], scale. = TRUE, center = TRUE)
 vax.pca3$rotation
-summary(vax.pca3) # adding 2 more vars brings the proportion of variance of PC1 from 67 to 73%, so keeping those in here
+summary(vax.pca3) # PVE of PC1=73.3%
 plot(summary(vax.pca3)$importance[2, ],  # PVE
      ylab="PVE",
      xlab="Number of PC's",
@@ -481,13 +456,13 @@ ggplot(vac.sum.with.VSI, aes(x = reorder(country, -VSI), y = VSI, fill = country
 
 We can see that Somalia appears to be the country with the lowest VSI, and Cuba appears to have the highest VSI. 
 
-## Finalizing Dataset
+# Compiling Dataset
 
 We'll write our final dataset by joining our WSD predictors, prevax COVID case & death predictors, and VSI. 
 
 ```{r}
 #merging WSD predictors with cases, deaths & maxrate data
-case.wsd.wide <- inner_join(covid.predict, wsd.sum.wide, by="country") #predictors only
+case.wsd.wide <- inner_join(wsd.nocor, covid.nocor, by="country") #predictors only
 #skim(case.wsd.wide)
 
 #adding in VSI
@@ -543,20 +518,13 @@ Let's now see how various socioeconomic, sustainability and political factors ma
 
 ## Linear models
 
-A number of variables in our dataset appear highly correlated. This is due to several reasons:  
-
-* some variables already initially present in the world sustainability dataset (`WSD`) were highly correlated (for example, the proportion of Urban and Rural population variables) 
-* the creation of different summary measures over distinct time spans - e.g., last 2018 data, 2015-2018 average, 2001-2018 average, 2001-2018 change) also led to a number of variables that may contain very similar information. 
-
-To address this, we propose two different approaches: 
-
-* In the first approach, we are creating several linear models by selecting variables based on domain knowledge. Each model is focused on specific themes that may be of importance for predicting a country's `VSI` score. The following themes will be covered: 
+In the first approach, we are creating several linear models by selecting variables based on domain knowledge. Each model is focused on specific themes that may be of importance for predicting a country's `VSI` score. The following themes will be covered: 
   + Economic factors
   + "COVID burden" factors, i.e. how heavily a country suffered in terms of number of cases and deaths prior to vaccination start
   + Political and country development factors
   + Full model: we combine the most relevant factors into a comprehensive model
   
-* In the second approach, we remove highly colinear WSD and COVID predictors (abs value > 0.95) before running more inclusive, data-driven models using LASSO. 
+In the second approach, we will run more inclusive, data-driven models using LASSO. 
 
 
 ### Thematic linear models
@@ -744,8 +712,6 @@ plot_VSI_lifexp
 
 
 ## Removing Highly Correlated Variables
-
-Before running our data-driven models, we'll automatically remove one of each pair of highly-colinear predictors within WSD and uor COVID pre-vaccine cases & deaths datasets. While the removal is unsupervised based on our specified 0.95 threshold, our dataframe is structured such that variables we believe will be more predictive or complete from a prior knowledge (2018 values or values averaged over all years) will be prioritized for selection over variables that are less likely to be relevant (such as change over the 17 year WSD period).
 
 ```{r}
 #method from https://statisticsglobe.com/remove-highly-correlated-variables-from-data-frame-r
@@ -1079,11 +1045,98 @@ plot(fit.nn)
 ## Unused Dataframes
 Stuff that we output but wasn't used for modeling - may be useful for EDA or post-hoc analyses:
 
+### WSD Summary Dataframes
+
 ```{r, eval=FALSE}
-#get just cases & deaths stuff from  last.timepoint (mar 2022 covid cases and death)
+### 2018 values
+wsd.2018 <- wsd %>% subset(Year==max(wsd$Year)) %>% dplyr::select(-Year) #filter to last year of WSD data
+colnames(wsd.2018)[5:30] <- paste(colnames(wsd.2018)[5:30], "2018", sep = "_") #add suffix
+head(wsd.2018)
+n_unique(wsd.2018$country) #only 109 of 141 countries have 2018 data
+
+### Values averaged across 2016-2018; only includes countries with data from all 3 years. 
+# 3-yr averages for numeric
+wsd.3yr.num <- wsd %>% arrange(Year) %>%
+  filter(Year >= 2016) %>% #get 2016-2018 data
+  group_by(country) %>%
+  filter(n() == 3) %>%
+  summarise_if(is.numeric, mean) %>% #means
+  ungroup()
+colnames(wsd.3yr.num)[2:26] <- paste(colnames(wsd.3yr.num)[2:26], "3yr", sep = "_") #add suffix
+
+# 3-yr mode for factors
+wsd.3yr.fac <- wsd %>% arrange(Year) %>%
+  group_by(country) %>%
+  filter(Year >= 2016) %>% #get 2016-2018 data
+  filter(n() == 3) %>%
+  mutate(WorldBankIncomeClass = Mode(WorldBankIncomeClass),
+         RegimeType = Mode(RegimeType),
+         nYears=n()) %>% #count how many years are being averaged for each country) %>%
+  ungroup() %>%
+  dplyr::select(country, WorldRegion, nYears, WorldBankIncomeClass, RegimeType) %>%
+  distinct()
+#n_unique(wsd.3yr.fac$country) #make sure no countries missing
+colnames(wsd.3yr.fac)[3:5] <- paste(colnames(wsd.3yr.fac)[3:5], "3yr", sep = "_") #add suffix
+
+wsd.3yr <- merge(wsd.3yr.fac, wsd.3yr.num, by="country") %>% #rejoin num and fac
+    dplyr::select(-Year_3yr, -nYears_3yr)
+nrow(wsd.3yr)
+
+### remove any countries that have less than 15 years worth of data from average
+wsd.avg <- wsd.avg %>%
+  subset(nYears_avg >= 15)
+nrow(wsd.avg)
+
+### change in each parameter over 10 years
+# define function to get relative change
+rel.diff <- function(x) {(x - lag(x))/lag(x)} # define function to get relative change
+
+wsd.change.num <- wsd %>% 
+  group_by(country) %>%
+  arrange(Year) %>%
+  select_if(is.numeric)%>% # just dealing with numeric for now
+  subset(Year==2018 | Year == 2008) %>%
+  filter(n() >= 2) %>% #make sure country has data for both years
+  mutate(across(where(is.numeric), ~rel.diff(.), .names="{.col}_rel.diff")) %>% # change normalized by baseline values
+  # mutate(across(c(!ends_with("diff")), ~diff(.x), .names="{.col}_diff"))  %>%  #absolute change 
+  mutate_if(is.numeric, function(x) ifelse(is.infinite(x), 0, x)) %>% # change Inf values to 0
+  dplyr::select(-Year, -Year_rel.diff) %>% #-Year_diff,
+  drop_na() %>%
+  ungroup()
+
+#now factors
+wsd.change.fac <- wsd %>%
+  dplyr::select(country, Year, WorldBankIncomeClass, RegimeType)
+# order factors
+wsd.change.fac$WorldBankIncomeClass <- factor(wsd.change.fac$WorldBankIncomeClass, levels=c("Low income", "Lower-middle income", "Upper-middle income", "High income"), ordered=TRUE)
+wsd.change.fac$RegimeType <- factor(wsd.change.fac$RegimeType, levels=c("Closed Autocracy", "Electoral Autocracy", "Electoral Democracy", "Liberal Democracy"), ordered=TRUE)
+
+wsd.change.fac <- wsd.change.fac %>% 
+  group_by(country) %>%
+  arrange(Year) %>%
+  subset(Year==2018 | Year == 2008) %>%
+  filter(n() >= 2) %>% #make sure country has data for both years
+  mutate(#WorldBankIncomeClass_diff = unclass(WorldBankIncomeClass) - unclass(lag(WorldBankIncomeClass)),
+         WorldBankIncomeClass_rel.diff = rel.diff(unclass(WorldBankIncomeClass)),
+         # RegimeType_diff = unclass(RegimeType) - unclass(lag(RegimeType)),
+         RegimeType_rel.diff = rel.diff(unclass(RegimeType))) %>% 
+  mutate_if(is.numeric, function(x) ifelse(is.infinite(x), 0, x)) %>% # change Inf values to 0
+  dplyr::select(-Year) %>%
+  drop_na() %>%
+  ungroup()
+
+#now join and drop unnecessary columns used for calculations
+wsd.change <- merge(wsd.change.num, wsd.change.fac, by ="country") %>%
+  dplyr::select(country, ends_with("diff"))
+```
+
+### COVID Summary Dataframes
+
+```{r, eval=FALSE}
+### get just cases & deaths stuff from  last.timepoint (mar 2022 covid cases and death)
 last.case <- last.timepoint %>% dplyr::select("country", "date_last" | contains("case") | contains("death")) 
 
-# cases & deaths at 1 yr after date.first.vac
+### cases & deaths at 1 yr after date.first.vac
 covid_1yr <- covid %>%
   group_by(country) %>%
   drop_na(date.first.vac) %>%
@@ -1093,12 +1146,16 @@ colnames(covid_1yr)[2:19] <- paste(colnames(covid_1yr)[2:19], "1yr", sep = "_") 
 #covid_1yr <- covid_1yr[, which(colMeans(!is.na(covid_1yr)) > 0.5)] #remove cols with NA > 50%
 #sum(is.na(covid_1yr$cumulative_total_cases))
 
-#merging all COVID data 
+### merging all COVID data 
 covid.df_list <- list(covid_prevac, covid_maxrate, last.case, vac.dump, covid_1yr)
 covid.all <- covid.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
 n_unique(covid.all$country)
 skim(covid.all)
+```
 
+### Integrated Summary Dataframes
+
+```{r, eval=FALSE}
 #merging WSD predictors with vaccination summary data
 vac.wsd.wide <- inner_join(vac.dump, wsd.sum.wide, by="country")
 #skim(vac.wsd.wide)
@@ -1125,7 +1182,7 @@ wsd.sum.long <- wsd.sum.wide %>%
 
 Here's code to subdivide the train/test dfs based on what type of WSD predictors they include (i.e. so you can easily train a model only on the WSD 17-yr averages, plus static measures and covid cases/deaths).
 
-```{r,}
+```{r, eval=FALSE}
 # WSD 2018
 data.train_2018 <- data.train %>% dplyr::select(-c(contains("_3yr") | contains("_avg") | contains("_rel.diff") | contains("_diff")))
 data.test_2018 <- data.test %>% dplyr::select(-c(contains("_3yr") | contains("_avg") | contains("_rel.diff") | contains("_diff")))
@@ -1150,3 +1207,4 @@ data.test_diff <- data.test %>% dplyr::select(-c(contains("_2018") | contains("_
 data.val_diff <- data.val %>% dplyr::select(-c(contains("_2018") | contains("_3yr") | contains("_avg")))
 data.train.test_diff <- data.train.test %>% dplyr::select(-c(contains("_2018") | contains("_3yr") | contains("_avg")))
 ```
+
